# BSMPTBAU

./: .codecov.yaml  CMakeLists.txt  Changelog.md  Contributing.md  README.md  Setup.py  conanfile.py  grow_modes_fixed.csv  ini_r1.csv  ini_r2.csv  output.csv  output.tsv  standard.csv  test.csv  totneg.csv
.github/workflows/: benchmark.yml  benchmark_on_pr.yml  bump_version.yml  codecov.yml  codeql.yml  conan.yml  doc.yml  linter.yml  test.yml
documentation/: BSMPT_8cpp.html  BenchmarkModel_8h_source.html  BubbleWallProfile_8cpp.html  BubbleWallProfile_8h_source.html  C2HDM_8h_source.html  CPINTHEDARK_8h_source.html  CXSM_8h_source.html  CalcBAUBench_8cpp.html  CalcBAUBench_8cpp.js  CalcBAU_8cpp.html  CalcBAU_8cpp.js  CalcCT_8cpp.html  CalcGW_8cpp.html  CalcTemps_8cpp.html  CalculateEWBG_8cpp.html  CalculateEtaInterface_8cpp.html  CalculateEtaInterface_8h.html  CalculateEtaInterface_8h_source.html  ClassPotentialC2HDM_8h.html  ClassPotentialC2HDM_8h_source.html  ClassPotentialCPintheDark_8h.html  ClassPotentialCPintheDark_8h_source.html  ClassPotentialCxSM_8cpp.html  ClassPotentialCxSM_8h.html  ClassPotentialCxSM_8h_source.html  ClassPotentialN2HDM_8cpp.html  ClassPotentialN2HDM_8h.html  ClassPotentialN2HDM_8h_source.html  ClassPotentialOrigin_8h.html  ClassPotentialOrigin_8h.js  ClassPotentialOrigin_8h_source.html  ClassPotentialR2HDM_8h_source.html  ClassPotentialRxSM_8h.html  ClassPotentialRxSM_8h.js  ClassPotentialRxSM_8h_source.html  ClassPotentialSM_8cpp.html  ClassPotentialSM_8h.html  ClassPotentialSM_8h_source.html  ClassTemplate_8cpp.html  ClassTemplate_8h.html  (+580 more)
documentation/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_1e.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  enums_2.js  (+54 more)
example/: RxSM_Input.dat_CalcGW  RxSM_noVS_Input.dat_CalcGW
example/JSON/: BSMPT.json  CalculateEWBG.json  PlotEWBG_nL.json  PlotEWBG_vw.json  Test.json  TripleHiggsCouplingsNLO.json  VEVEVO.json
include/BSMPT/Kfactors/: Kernels.h  vw_Kfactors.h
include/BSMPT/ThermalFunctions/: ThermalFunctions.h
include/BSMPT/baryo_calculation/: CalculateEtaInterface.h  difeq.h  solvde.h  transport_network.h
include/BSMPT/baryo_fhck/: BenchmarkModel.h  BubbleWallProfile.h  LocalCalcEta.h  TransportEquations.h  TransportModel.h  difeq.h  difeq_bubble_profile.h  difeq_domain_wall.h  difeq_transport_equations.h  difeq_vacuum_profile.h  solvde.h  solvde2.h
include/BSMPT/bounce_solution/: action_calculation.h  bounce_solution.h
include/BSMPT/minimizer/LibNLOPT/: MinimizeNLOPT.h
include/BSMPT/minimum_tracer/: minimum_tracer.h
include/BSMPT/models/: ClassPotentialC2HDM.h  ClassPotentialCPintheDark.h  ClassPotentialCxSM.h  ClassPotentialN2HDM.h  ClassPotentialOrigin.h  ClassPotentialR2HDM.h  ClassPotentialRxSM.h
include/BSMPT/transition_tracer/: transition_tracer.h
include/BSMPT/utility/: Logger.h  NumericalIntegration.h  abscissa.h  data_structures.h  matrix_operations.h  newt.h  nr3.h  utility.h
include/BSMPT/utility/relaxation/: data_structures.h  difeq.h  solvde.h
include/BSMPT/vacuum_profile/: BubbleWallProfile.h  difeq_vacuum_profile.h  vacuum_profile.h
src/: CMakeLists.txt
src/Kfactors/: CMakeLists.txt  Kernels.cpp  vw_Kfactors.cpp
src/ThermalFunctions/: ThermalFunctions.cpp
src/WallThickness/: WallThickness1D.cpp
src/baryo_calculation/: CMakeLists.txt  difeq.cpp  transport_network.cpp
src/baryo_fhck/: BenchmarkModel.cpp  BubbleWallProfile.cpp  CMakeLists.txt  Kernels.cpp  LocalCalcEta.cpp  TransportEquations.cpp  TransportModel.cpp  solvde2.cpp
src/bounce_solution/: action_calculation.cpp  bounce_solution.cpp
src/gravitational_waves/: gw.cpp
src/minimizer/: CMakeLists.txt  MinimizeGSL.cpp
src/minimizer/LibCMAES/: MinimizeLibCMAES.cpp
src/minimizer/LibNLOPT/: MinimizeNLOPT.cpp
src/minimum_tracer/: minimum_tracer.cpp
src/models/: CMakeLists.txt  ClassPotentialC2HDM.cpp  ClassPotentialCPintheDark.cpp  ClassPotentialCxSM.cpp  ClassPotentialN2HDM.cpp  ClassPotentialOrigin.cpp  ClassPotentialR2HDM.cpp  ClassPotentialRxSM.cpp  IncludeAllModels.cpp
src/prog/: CalcBAU.cpp  CalcBAUBench.cpp  CalcBAU_vwall.cpp  CalcGW.cpp  CalcTemps.cpp  CalculateEWBG.cpp  MinimaTracer.cpp  PlotEWBG_nL.cpp  PlotEWBG_vw.cpp  PotPlotter.cpp
src/transition_tracer/: transition_tracer.cpp
src/utility/: CMakeLists.txt  Logger.cpp  NumericalIntegration.cpp  data_structures.cpp  matrix_operations.cpp  newt.cpp  parser.cpp  utility.cpp
src/utility/asciiplotter/: CMakeLists.txt
src/utility/spline/: CMakeLists.txt  spline.cpp
src/vacuum_profile/: BubbleWallProfile.cpp  CMakeLists.txt  vacuum_profile.cpp
standalone/: CMakeLists.txt  GenericModel.cpp  TunnelingPath.cpp
tests/GenerateTestCompares/: CMakeLists.txt  RXSM.cpp  RXSM.h  RXSM_noVS.cpp  RXSM_noVS.h
tests/benchmarks/: CMakeLists.txt  benchmark-ewbg-c2hdm.cpp
tests/unittests/: CMakeLists.txt  Test-baryo.cpp  Test-c2hdm.cpp  Test-gw.cpp  Test-origin.cpp  Test-rxsm.cpp  Test-signrotationmatrix.cpp  Test-vacuumprofile.cpp
tests/unittests/baryotests/: CMakeLists.txt
tests/unittests/signrotationmatrix_data/: c2hdm_unittest_signrotationmatrix.tsv  cpinthedark_unittest_signrotationmatrix.tsv  cxsm_unittest_signrotationmatrix.tsv  n2hdm_unittest_signrotationmatrix.tsv  r2hdm_unittest_signrotationmatrix.tsv  rxsm_unittest_signrotationmatrix.tsv
tools/ModelGeneration/Mathematica/: CreateModel.m
